Add initial support for SoapApi configurations
