# gateway/gateway-controller/cmd/controller/main.go
@@ -754,6 +754,12 @@ func generateAuthConfig(config *config.Config) commonmodels.AuthConfig {
 		"PUT /rest-apis/:id":    {"admin", "developer"},
 		"DELETE /rest-apis/:id": {"admin", "developer"},
 
+		"POST /soap-apis":       {"admin", "developer"},
+		"GET /soap-apis":        {"admin", "developer"},
+		"GET /soap-apis/:id":    {"admin", "developer"},
+		"PUT /soap-apis/:id":    {"admin", "developer"},
+		"DELETE /soap-apis/:id": {"admin", "developer"},
+
 		"POST /websub-apis":       {"admin", "developer"},
 		"GET /websub-apis":        {"admin", "developer"},
 		"GET /websub-apis/:id":    {"admin", "developer"},
@@ -801,6 +807,12 @@ func generateAuthConfig(config *config.Config) commonmodels.AuthConfig {
 		"PUT /rest-apis/:id/api-keys/:apiKeyName":             {"admin", "consumer"},
 		"POST /rest-apis/:id/api-keys/:apiKeyName/regenerate": {"admin", "consumer"},
 		"DELETE /rest-apis/:id/api-keys/:apiKeyName":          {"admin", "consumer"},
+
+		"POST /soap-apis/:id/api-keys":                        {"admin", "consumer"},
+		"GET /soap-apis/:id/api-keys":                         {"admin", "consumer"},
+		"PUT /soap-apis/:id/api-keys/:apiKeyName":             {"admin", "consumer"},
+		"POST /soap-apis/:id/api-keys/:apiKeyName/regenerate": {"admin", "consumer"},
+		"DELETE /soap-apis/:id/api-keys/:apiKeyName":          {"admin", "consumer"},
 
 		"POST /llm-providers/:id/api-keys":                        {"admin", "consumer"},
 		"GET /llm-providers/:id/api-keys":                         {"admin", "consumer"},
